# tinylibrary

./: .bowerrc  .dockerignore  .eslintrc.js  .gitignore  Dockerfile  Pipfile  README.md  basic.py  bower.json  docker-compose.yml  fabfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.Dockerfile  rollup.config.js  setup.py  tasks.py  tox.ini
testing/: settings.py  urls.py  wsgi.py
tinylibrary/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  util.py  views.py  widgets.py
tinylibrary/fixtures/: goodreads_library_export.csv
tinylibrary/migrations/: 0001_initial.py  0002_auto_20180601_0613.py
tinylibrary/static/tinylibrary/: main.js  main.scss  quikrete-file.js  tinylibrary.js  tl-scanner.js
tinylibrary/templates/: base.html  modern.html
tinylibrary/templates/django/forms/widgets/: clearable_file_input.html  text.html
tinylibrary/templates/tinylibrary/: book_confirm_delete.html  book_detail.html  book_form.html  book_list.html  buttons.html  help.html  import.html  person_form.html  quagga2.html  quagga_test.html
