[tool.poetry]
name = "tinylibrary"
version = "0.2.0"
description = "Simple django app to manage a small library also testbed for best practices"
authors = ["Jack Laxson <jackjrabbit@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
requests = "^2.22.0"
xmltodict = "^0.12.0"
whitenoise = "^5.0.1"
dj-database-url = "^0.5.0"
attrs = "^19.3.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.4"
materialdjango = "^0.2.5"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
